2.8.0-dev
--------------------

2.7.2
---------------------
* Fixed code position

2.7.1
---------------------
* Added first page for A/B testing

2.7.0
---------------------
*

2.6.1
---------------------
* 67752650 - BUG: while searching for search?q=Dn31+1pd&area_of_law=Employment error 500
* 66813762 - Require change of lat/lon when admin changes visiting address post code
* 67842856 - Display for multiple addresses is messed up
* 67843182 - Extraneous 'f' characters appearing for Opening times
* 67845888 - Copy for searches for divorce/adoption/children is not always showing (3 pts)

2.6.0
---------------------
* 65905292 - Phone number editing - don't allow duplicate numbers to be entered
* 66808486 - Don't show lat long validation error if visiting address
* 66609752 - Search Family court for divorce application
* 67016910 - Automatic testing should not call live MapIt API
* 66609322 - "Manage all courts" admin control for Family court - Children applications
* 66610114 - "Manage all courts" admin control for Family court - Adoption applications
* 66610070 - "Manage all courts" admin control for Family court - Divorce applications
* 65905292 - Phone number editing - don't allow duplicate numbers to be entered
* 66808486 - Don't show lat long validation error if visiting address
* 66609752 - Search Family court for divorce application
* 66612556 - Warning for unassigned local authorities to Family court - Adoption
* 66612546 - Warning for unassigned local authorities to Family court - Divorce
* 66612298 - Warning for unassigned local authorities to Family court - Children
* 66609784 - Search Family court for adoption application
* 66609752 - Search Family court for divorce application
* 67486836 - BUG: Multiple search results
* 66808486 - Don't show error if visiting address is not set and no lat/lon

2.5.4
---------------------
* Added rescue block around audit csv function

2.5.3
---------------------