@@ -6,7 +6,7 @@ namespace :admin do
     email, password, name = args[:email], args[:password],  args[:name]
     puts "Creating Admin user with name: #{name} and email: #{email} and with password: #{password}"
 
-    User.create(email: email,
+    User.create!(email: email,
                 password: password,
                 password_confirmation: password,
                 name: name,
