@@ -17,6 +17,11 @@ describe Court do
       @court1.contacts.count.should == 0
     end
 
+    it "should not allow a phone number longer than 13 digits (excluding spaces) to be added to a court" do
+      @court1.contacts.create(telephone: "020 8271 1530 or 020 8271 1533")
+      @court1.contacts.count.should == 0
+    end
+
     it "should not allow the same phone number to be added to a court contact" do
       2. times { @court1.contacts.create(telephone: "50800 800 8080", contact_type_id: @helpdesk.id) }
       @court1.contacts.count.should == 1
